--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <h2>More About Me</h2>
       <p>
         In the past, I've worked on user interfaces (UI/UX), quality assurance (QA), and database platforms.
-        You can find more detail about my experiences on my <a href="https://www.linkedin.com/in/erin-edward/" target="_blank">LinkedIn</a>.
+        You can find more details about my experience on <a href="https://www.linkedin.com/in/erin-edward/" target="_blank">LinkedIn</a>.
         Keep scrolling for a summary of my skills and recent projects. 
       </p>
       <p>
@@ -85,7 +85,7 @@
         terms on the Women in Computer Science 
         <a href="https://wics.uwaterloo.ca/">(WiCS)</a>
         Undergraduate Committee, starting as the Office Assistant and working my way up to Chair. 
-        Through my work with WiCS I was sponsored to attend the Grace Hopper conference. 
+        Through my work with WiCS I was sponsored by the university to attend the Grace Hopper Conference. 
         I wanted to bring some of that experience back to my peers in Waterloo, so I joined the founding 
         <a href="https://starcon.io/">StarCon</a> team as Director of Logistics. I also tutor math and French
         and volunteer with Girl Guides. 
