--- a/index.html
+++ b/index.html
@@ -100,26 +100,26 @@
           <li><b class="skill-titles">C++ :</b> 
             Several years of course work using <b>Objected Oriented</b> programming and <b>design patterns</b>. 
             <!-- <br/> -->
-            Projects include console Chess and Catan games, maze and hierarchial puppet with <b>OpenGL</b>, and non-recursive <b>Ray Tracer</b>. </li>
+            Projects include console Chess and Catan games, maze and interactive puppet with <b>OpenGL</b>, and non-recursive <b>Ray Tracer</b>. </li>
           <li><b class="skill-titles">Python :</b> 
             Several years of course work as well as script writing for internships.</li>
           <li><b class="skill-titles">Bash scripts :</b> 
             Several years of course work as well as script writing for internships.</li>
           <li><b class="skill-titles">Agile Development :</b> 
-            Lead the transition to Agile development at my last coop and acted as scrum leader/project manager</li>
+            Lead the transition to Agile development at my last coop and acted as scrum leader/project manager.</li>
         </ul>
         <ul class="skill-body">
           <li><b class="skill-titles">Git version control :</b>
-            Several years of experience for both group and personal projects</li>
+            Several years of experience for both group and personal projects.</li>
           <li><b class="skill-titles">Java :</b> 
-            Coursework projects including mobile PDF annotater for <b>Android</b>, snake game, and image editor similar to MS paint</li>
+            Coursework projects including mobile PDF annotater for <b>Android</b>, snake game, and image editor similar to MS paint.</li>
           <li><b class="skill-titles">HTML/CSS/JavaScript :</b> 
             I built this website! I've also contributed to the 
             <a href="https://wics.uwaterloo.ca/">WiCS</a>
             website and created web apps for several hackathons.
           </li>
           <li><b class="skill-titles">Math :</b> 
-            Skilled in <b>Linear Algebra</b>, multi variable <b>Calculus</b>, and basic <b>Physics</b> of motion.</li>
+            Skilled in <b>Linear Algebra</b>, multi-variable <b>Calculus</b>, and basic <b>Physics</b> of motion.</li>
         </ul>
       </div>
     </section>
