--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <body>
     <!-- Navbar -->
     <nav>
-      <h1>ERIN EDWARD | Aspiring Software Developer</h1>
+      <h1>ERIN EDWARD | Software Engineer</h1>
       <ul class="navigation">
         <li><a href="#about" class="nav-link">About</a></li>
         <li><a href="#skills" class="nav-link">Skills</a></li>
@@ -65,9 +65,7 @@
           of creativity and technology, whether that's thinking outside the box 
           to solve interesting problems or creating beautiful things with code. 
           When I'm not in front of my computer you can find me nose deep in a 
-          book or experimenting in the kitchen. I'm currently looking for 
-          full-time opportunities where I can be part of a dynamic team and 
-          continue my growth as a software developer.
+          book or experimenting in the kitchen. 
         </p>
       </div>
     </section>
@@ -84,7 +82,7 @@
         Outside of work, I’ve been heavily involved in education and inclusion initiatives. I served multiple 
         terms on the Women in Computer Science 
         <a href="https://wics.uwaterloo.ca/">(WiCS)</a>
-        Undergraduate Committee, starting as the Office Assistant and working my way up to Chair. 
+        Undergraduate Committee, both as Secretary and Chair. 
         Through my work with WiCS I was sponsored by the university to attend the Grace Hopper Conference. 
         I wanted to bring some of that experience back to my peers in Waterloo, so I joined the founding 
         <a href="https://starcon.io/">StarCon</a> team as Director of Logistics. I also tutor math and French
@@ -98,7 +96,7 @@
       <div class="skill-container">
         <ul class="skill-body">
           <li><b class="skill-titles">C++ :</b> 
-            Several years of course work using <b>Objected Oriented</b> programming and <b>design patterns</b>. 
+            Several years of course work using <b>Object Oriented</b> programming and <b>design patterns</b>. 
             <!-- <br/> -->
             Projects include console Chess and Catan games, maze and interactive puppet with <b>OpenGL</b>, and non-recursive <b>Ray Tracer</b>. </li>
           <li><b class="skill-titles">Python :</b> 
@@ -106,7 +104,7 @@
           <li><b class="skill-titles">Bash scripts :</b> 
             Several years of course work as well as script writing for internships.</li>
           <li><b class="skill-titles">Agile Development :</b> 
-            Lead the transition to Agile development at my last coop and acted as scrum leader/project manager.</li>
+            Led the transition to Agile development at my last coop and acted as scrum leader/project manager.</li>
         </ul>
         <ul class="skill-body">
           <li><b class="skill-titles">Git version control :</b>
@@ -216,19 +214,6 @@
             <br />
             <a href="https://git.uwaterloo.ca/esedward/cs383/-/tree/master/a2" class="nav-link" id="code-flies">View the code repository</a>
           </div>
-        </div>
-      </div>
-      <div class="projects-container">
-        <div class="project-container project-card">
-          <h3 class="project-title">Food Fiends Design Demo</h3>
-          <iframe src="https://player.vimeo.com/video/720058970?h=43bcfc5fae" frameborder="0" style="width:100%" allowfullscreen></iframe>
-          <!-- <iframe src="https://player.vimeo.com/video/720058970?h=43bcfc5fae" width="640" height="564" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>          <p class="project-details"> -->
-          <p class="project-details">
-            This DEMO was created for a Human-Computer Interaction course using Android Studio 
-            in collaboration with Kayla Hardie, Kevin Lu, and Kriti Ravindran.
-            We created a high-fidelity prototype for an app that recommends recipes to reduce food waste 
-            and interviewed target users to test user-experience.
-          </p>
         </div>
       </div>
     </section>
